@startuml

title __CESTOVNYDENNIK's Class Diagram__\n

  package  {
    package cestovnydennik {
      class Application {
      }
    }
  }
  

  package  {
    package cestovnydennik {
      package cestovnydennik.controller {
        class Controller {
        }
      }
    }
  }
  

  package  {
    class JspClass {
    }
  }
  

  package  {
    package cestovnydennik {
      package cestovnydennik.controller {
        class MainController {
        }
      }
    }
  }
  

  package  {
    package cestovnydennik {
      package cestovnydennik.model {
        class TravelRecord {
        }
      }
    }
  }
  

  package  {
    package cestovnydennik {
      package cestovnydennik.dao {
        interface TravelRecordRepository {
        }
      }
    }
  }
  

  package  {
    package cestovnydennik {
      package cestovnydennik.service {
        class TravelRecordService {
        }
      }
    }
  }
  

  Controller o-- TravelRecordService : travelRecordService
  JspClass -up-|> HttpJspPage
  MainController o-- TravelRecordService : travelRecordService
  TravelRecord -up-|> Serializable
  TravelRecordService o-- TravelRecordRepository : travelRecordRepository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
